--- a/package.json
+++ b/package.json
@@ -29,5 +29,5 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
-  "homepage": "https://YOUR_USERNAME.github.io/pong"
+  "homepage": "https://YOUR_USERNAME.github.io/pong-mp"
 }
