--- a/render.yaml
+++ b/render.yaml
@@ -15,10 +15,16 @@ services:
         value: https://asuhantsev.github.io
       - path: /*
         name: Access-Control-Allow-Methods
-        value: GET,POST,OPTIONS
+        value: GET,POST,OPTIONS,UPGRADE
       - path: /*
         name: Access-Control-Allow-Headers
-        value: Content-Type,Authorization
+        value: Content-Type,Authorization,Connection,Upgrade,Sec-WebSocket-Key,Sec-WebSocket-Version
       - path: /*
         name: Access-Control-Allow-Credentials
-        value: "true" 
+        value: "true"
+    routes:
+      - type: rewrite
+        source: /socket.io/*
+        destination: /socket.io/$1
+    healthCheckPath: /
+    autoDeploy: true 
