--- a/render.yaml
+++ b/render.yaml
@@ -15,16 +15,12 @@ services:
         value: https://asuhantsev.github.io
       - path: /*
         name: Access-Control-Allow-Methods
-        value: GET,POST,OPTIONS,UPGRADE
+        value: GET,POST,OPTIONS
       - path: /*
         name: Access-Control-Allow-Headers
-        value: Content-Type,Authorization,Connection,Upgrade,Sec-WebSocket-Key,Sec-WebSocket-Version
+        value: Content-Type,Authorization
       - path: /*
         name: Access-Control-Allow-Credentials
         value: "true"
-    routes:
-      - type: rewrite
-        source: /socket.io/*
-        destination: /socket.io/$1
     healthCheckPath: /
     autoDeploy: true 
