--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# But allow env template
+!.env.template
