--- a/render.yaml
+++ b/render.yaml
@@ -12,15 +12,12 @@ services:
     headers:
       - path: /*
         name: Access-Control-Allow-Origin
-        value: https://asuhantsev.github.io
+        value: "*"
       - path: /*
         name: Access-Control-Allow-Methods
-        value: GET,POST,OPTIONS
+        value: "GET, POST, OPTIONS"
       - path: /*
         name: Access-Control-Allow-Headers
-        value: Content-Type,Authorization
-      - path: /*
-        name: Access-Control-Allow-Credentials
-        value: "true"
+        value: "*"
     healthCheckPath: /
-    autoDeploy: true 
+    autoDeploy: true
