Setup deployment: - Update GitHub Actions workflow - Fix component references - Add error boundary - Update server configuration - Add deployment templates

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,34 +5,20 @@ on:
     branches:
       - main
 
-# Add these permission settings
-permissions:
-  contents: write
-  pages: write
-  id-token: write
-
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-          
       - name: Install Dependencies
-        run: npm ci
+        run: npm install
         
       - name: Build
         run: npm run build
-        env:
-          VITE_SOCKET_SERVER: 'https://pong-322h.onrender.com'
-          
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
+        
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@4.1.5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist 
+          branch: gh-pages
+          folder: dist 
