--- a/render.yaml
+++ b/render.yaml
@@ -2,22 +2,15 @@ services:
   - type: web
     name: pong-server
     env: node
-    buildCommand: cd server && npm install
-    startCommand: cd server && node index.js
+    buildCommand: npm install
+    startCommand: node server/index.js
     envVars:
-      - key: PORT
-        value: 3001
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3001
     headers:
       - path: /*
-        name: Access-Control-Allow-Origin
-        value: "*"
-      - path: /*
-        name: Access-Control-Allow-Methods
-        value: "GET, POST, OPTIONS"
-      - path: /*
-        name: Access-Control-Allow-Headers
-        value: "*"
-    healthCheckPath: /
-    autoDeploy: true
+        values:
+          Cache-Control: no-cache
+          Connection: keep-alive
