Fix WebSocket connection issues: - Fix handleConnectionRecovery reference - Update WebSocket configuration - Add transport fallback - Improve connection handling

--- a/render.yaml
+++ b/render.yaml
@@ -14,9 +14,8 @@ services:
         values:
           Cache-Control: no-cache
           Connection: keep-alive
-          Upgrade: $http_upgrade
-          Connection: upgrade
     routes:
       - type: rewrite
         source: /socket.io/*
         destination: /socket.io/$1
+    websocket: true # Enable WebSocket support
