Fix WebSocket connection: - Update Socket.IO server config with polling fallback - Add proper CORS and WebSocket headers - Update client socket options - Add environment variables template

--- a/server/.env.template
+++ b/server/.env.template
@@ -3,4 +3,4 @@ PORT=3001
 NODE_ENV=production
 
 # CORS settings
-CORS_ORIGIN=https://asuhantsev.github.io,http://localhost:5173
+CORS_ORIGIN=https://asuhantsev.github.io
