--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
     "socket.io-client": "^4.7.2"
   },
